[MODORDERS-1109] -  Update tests